styles/main.css
/* ... */
.blog-item {
    display: flex;
    min-height: 460px;
    margin-bottom: 60px;
    border-radius: var(--large-radius);
    overflow: hidden;

    &:nth-child(odd) {
        background-color: var(--color-light-red);
    }

    &:nth-child(odd) > header > time {
        color: var(--color-accent-red);
    }

    &:nth-child(even) {
        background-color: var(--color-light-green);
    }

    &:nth-child(even) > header > time {
        color: var(--color-accent-green);
    }
}

.blog-item > img {
    --img-article-width: 60%;
    max-width: var(--img-article-width);
    flex: 0 0 var(--img-article-width);
    aspect-ratio: var(--blog-image-aspect-ratio);
    object-fit: cover;
}

.blog-item:last-child {
    margin-bottom: 35px;
}

.blog-item__header {
    padding: 63px 49px;
    flex-shrink: 1;
}

.blog-item__header > p,
.blog-item__header > time {
    font: var(--font-text);
    margin-bottom: 8px;
}

.blog-item__header > h3 {
    font: var(--font-h4-bold);
    margin-bottom: 16px;
}

/* = Blog page = */
/* Articles statistics Dialog */
dialog {
    margin: 0 auto;
    align-self: center;
    width: min(560px, calc(100vw - 32px));
    border: 1px solid var(--color-secondary);
    border-radius: var(--large-radius);
    color: var(--color-primary);
    background-color: var(--color-background);
    box-shadow: 0 18px 60px rgba(0, 0, 0, .55);
}

dialog::backdrop {
    background: var(--color-overlay);
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);
}

.modal {
    padding: 18px;
}

.modal__header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 16px;
}

.modal__header > h2 {
    font: var(--font-h3);
}

.modal__header > button {
    padding: 12px;
    border-color: var(--color-accent-red);
    color: var(--color-accent-red);

    &:hover, &:focus {
        background-color: var(--color-accent-red);
        color: var(--color-background);
    }
}

.model__stats-list {
    display: flex;
    gap: 26px;
}

.model__stats-list > li {
    flex-grow: 1;
}

.stats-card {
    padding: 12px 16px;
    background-color: var(--color-background);
    box-shadow: 2px 2px 6px 2px rgba(0, 0, 0, 0.25);
    border-radius: var(--large-radius);
}

.stats-card > h3 {
    font: var(--font-h4-regular);
    margin-bottom: 10px;
}

.stats-card > p {
    font: var(--font-h2);
}

/* Side menu */
.side-menu {
    position: fixed;
    top: 20vw;
    right: 0;
    z-index: 1000;

    &:hover > .side-menu__container {
        right: 0;
    }
}

.side-menu__container {
    position: absolute;
    right: -35px;
    transform: translateY(-50%);
    width: 48px;
    background-color: var(--color-background);
    border-radius: var(--large-radius) 0 0 var(--large-radius);
    box-shadow: -3px 0 10px rgba(0, 0, 0, 0.25);
    padding: 27px 15px;
    transition: right 0.5s ease-in-out; /* анимация перемещения */
    display: flex;
    flex-direction: column;
    gap: 10px;
    align-items: center;
    justify-content: center;
}

.side-menu__container > button {
    & > img {
        transition: transform var(--transition-speed);
    }

    &:hover > img, &:focus > img {
        transform: scale(1.05);
    }
}

/* Blog header */
.blog-header {
    display: flex;
    justify-content: space-between;
    gap: 160px;
    margin-bottom: var(--sections-gap);
}

.blog-header__title > h1 {
    margin-bottom: 25px;
}

.blog-header__title > p {
    font: var(--font-subtitle);
}

.blog-header__hero > img {
    min-width: clamp(140px, 15vw, 213px);
}

/* Blog articles Section */
.articles {
    margin-bottom: var(--sections-gap);
}

.articles > button {
    display: block;
    width: fit-content;
    margin: 0 auto;

    & > svg {
        margin-left: 10px;

        & > path {
            fill: currentColor;
        }
    }

    &:hover, &:focus {
        background-color: var(--color-accent-green);
        color: var(--color-background);
    }
}

.articles-list {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-column-gap: 16px;
    column-gap: 34px;
    row-gap: 64px;
    margin-bottom: 64px;
}

.articles-list:empty {
    display: block;
    text-align: center;
    padding-bottom: calc(var(--sections-gap) * 2);

    &::after {
        content: "Нет статей";
        color: var(--color-secondary);
    }
}

.articles-list:empty + button {
    display: none;
}

.article {
    position: relative;
    display: flex;
    flex-direction: column;
    gap: 8px;
    height: 100%;
}

.article > button {
    --button-delete-article-size: 24px;
    position: absolute;
    top: 0;
    right: 0;
    margin: 8px;
    width: var(--button-delete-article-size);
    height: var(--button-delete-article-size);
    background-color: var(--color-background);
    border: 1px solid transparent;
    border-radius: var(--small-radius);
    transition: border var(--transition-speed), background-color var(--transition-speed);

    &::after {
        content: "";
        display: block;
        background-image: url("../assets/images/delete-article.webp");
        width: 100%;
        height: 100%;
    }

    &:hover,
    &:focus {
        background-color: transparent;
        border: 1px solid var(--color-accent-green);
    }
}

.article > img {
    aspect-ratio: var(--blog-image-aspect-ratio);
    border-radius: var(--large-radius);
}

.article__content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    flex-grow: 1;
}

.article__content > h2 {
    display: none;
}

.article__content > p {
    font: var(--font-h4-regular);
    margin-bottom: 21px;
}

.article__content > time {
    font: var(--font-text);
}
/* ... */

